syntax = "proto3";
package prism.assets;

import "gogoproto/gogo.proto";
import "prism/assets/maturity_level.proto";
import "prism/assets/params.proto";
import "prism/assets/refractable_asset.proto";

option go_package = "github.com/prism-finance/prism-core/x/assets/types";

message EventSetParams {
  Params params = 1 [(gogoproto.nullable) = false];
}

message EventAddMaturityLevel {
  MaturityLevel maturity_level = 1 [(gogoproto.nullable) = false];
}

message EventDeactivateMaturityLevel {
  MaturityLevel maturity_level = 1 [(gogoproto.nullable) = false];
}

message EventSetRefractableAsset {
  RefractableAsset refractable_asset = 1 [(gogoproto.nullable) = false];
}

message EventSetMaturityLevel {
  MaturityLevel maturity_level = 1 [(gogoproto.nullable) = false];
}
